Elimina método sombras lejanas del CTE, fixes #1

--- a/biblio.bib
+++ b/biblio.bib
@@ -11799,16 +11799,13 @@
   Timestamp                = {08.07.2010}
 }
 
-@Misc{CodigoTecnico2006,
+@Misc{CTE2017,
   Title                    = {Código Técnico de la Edificación},
-  Year                     = {2006},
+  Year                     = {2017},
 
-  Abstract                 = {El Código Técnico de la Edificación, en adelante CTE, es el marco normativo por el que se regulan las exigencias básicas de calidad que deben cumplir los edificios, incluidas sus instalaciones, para satisfacer los requisitos básicos de seguridad y habitabilidad, en desarrollo de lo previsto en la disposición adicional segunda de la Ley 38/1999, de 5 de noviembre, de Ordenación de la Edificación, en adelante LOE.},
   Keywords                 = {Building, energy efficiency, legal},
   Owner                    = {oscar},
-  Refid                    = {Vivienda2006},
-  Timestamp                = {24.03.2010},
-  Url                      = {http://www.codigotecnico.org/}
+  Url                      = {https://www.codigotecnico.org/images/stories/pdf/ahorroEnergia/DBHE.pdf}
 }
 
 @Misc{RealDecreto2004,
