--- a/diapos/SFCR_ConceptosGenerales.tex
+++ b/diapos/SFCR_ConceptosGenerales.tex
@@ -1,21 +1,19 @@
-% Created 2015-02-07 sáb 16:14
+% Created 2018-01-08 lun 14:43
+% Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{fixltx2e}
 \usepackage{graphicx}
+\usepackage{grffile}
 \usepackage{longtable}
-\usepackage{float}
 \usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath}
 \usepackage{textcomp}
-\usepackage{marvosym}
-\usepackage{wasysym}
 \usepackage{amssymb}
+\usepackage{capt-of}
 \usepackage{hyperref}
-\tolerance=1000
 \usepackage{color}
 \usepackage{listings}
 \usepackage{mathpazo}
@@ -25,12 +23,13 @@
 \AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
 \AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
 \usepackage[emulate=units]{siunitx}
-\sisetup{per=fraction, fraction=nice, decimalsymbol=comma}
+\sisetup{fraction=nice, decimalsymbol=comma, retain-unity-mantissa = false}
 \newunit{\wattpeak}{Wp}
 \newunit{\watthour}{Wh}
 \newunit{\amperehour}{Ah}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
-\setbeamercolor{alerted text}{fg=red!50!black} \setbeamerfont{alerted text}{series=\bfseries}
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
 \usefonttheme{serif}
@@ -38,32 +37,37 @@
 \date{}
 \title{SFCR: Conceptos Generales}
 \hypersetup{
-  pdfkeywords={},
-  pdfsubject={},
-  pdfcreator={Emacs 24.4.1 (Org mode 8.2.7c)}}
+ pdfauthor={Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}},
+ pdftitle={SFCR: Conceptos Generales},
+ pdfkeywords={},
+ pdfsubject={},
+ pdfcreator={Emacs 25.2.2 (Org mode 9.1.4)}, 
+ pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Sistemas Fotovoltaicos de Conexión a Red}
-\label{sec-1}
+\label{sec:org586c01e}
 
 \subsection{Definición}
-\label{sec-1-1}
+\label{sec:orgdcc79e8}
 
-\begin{frame}[label=sec-1-1-1]{Definición de un SFCR}
-\begin{exampleblock}{}
+\begin{frame}[label={sec:org61d01c9}]{Definición de un SFCR}
+\begin{block}{}
 Un Sistema Fotovoltaico Conectado a la Red (SFCR) es un sistema cuya
 función es producir energía eléctrica en condiciones adecuadas para
 poder ser inyectada en la red convencional.
 
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EsquemaSFCR.pdf}
-\end{exampleblock}
+\end{center}
+\end{block}
 \end{frame}
 
 \subsection{Mecanismos de Retribución}
-\label{sec-1-2}
-\begin{frame}[label=sec-1-2-1]{Mecanismos de retribución}
+\label{sec:org1bc33c5}
+\begin{frame}[label={sec:org1b7d439}]{Mecanismos de retribución}
 \begin{itemize}
 \item La energía producida por este sistema será consumida parcial o totalmente en las cercanías, y la energía sobrante será inyectada en la red para su distribución a otros puntos de consumo.
 
@@ -77,7 +81,7 @@ poder ser inyectada en la red convencional.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-2-2]{Retribución con prima}
+\begin{frame}[label={sec:org5f3419b}]{Retribución con prima}
 \begin{itemize}
 \item \alert{Ingresos} por la \alert{energía total producida} (independientemente de la que
 haya sido consumida en las cercanías del SFCR).
@@ -89,7 +93,7 @@ tomar en consideración los consumos cercanos.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-2-3]{Balance neto}
+\begin{frame}[label={sec:orgb7d11c6}]{Balance neto}
 \begin{itemize}
 \item \alert{Compensa los saldos de energía eléctrica} entre el SFCR y un sistema de consumo asociado.
 
@@ -103,8 +107,8 @@ tomar en consideración los consumos cercanos.
 
 
 \subsection{SFCR en suelo y en edificación}
-\label{sec-1-3}
-\begin{frame}[label=sec-1-3-1]{Características distintivas sobre suelo y en edificación}
+\label{sec:org84200ae}
+\begin{frame}[label={sec:org1327699}]{Características distintivas sobre suelo y en edificación}
 \begin{itemize}
 \item \alert{Sobre suelo}
 
@@ -131,7 +135,7 @@ o son elementos constituyentes de la composición arquitectónica
 \end{frame}
 
 
-\begin{frame}[label=sec-1-3-2]{SFCR sobre suelo}
+\begin{frame}[label={sec:org233896b}]{SFCR sobre suelo}
 \begin{itemize}
 \item \alert{Objetivo}: maximizar la producción energética anual del sistema con
 el menor coste y la menor ocupación de terreno posibles
@@ -153,11 +157,13 @@ empleado).
 \end{frame}
 
 
-\begin{frame}[label=sec-1-3-3]{Estructuras sobre suelo}
+\begin{frame}[label={sec:org9c88cb1}]{Estructuras sobre suelo}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-4]{SFCR sobre suelo: seguimiento}
+\begin{frame}[label={sec:org3540cd2}]{SFCR sobre suelo: seguimiento}
 \begin{itemize}
 \item \alert{Fundamento:}
 
@@ -173,7 +179,7 @@ mejores aprovechamientos del terreno.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-5]{SFCR sobre suelo: seguimiento}
+\begin{frame}[label={sec:org86e04bb}]{SFCR sobre suelo: seguimiento}
 \begin{itemize}
 \item \alert{Doble eje}
 
@@ -205,16 +211,20 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label=sec-1-3-6]{Seguidor de eje horizontal N-S}
+\begin{frame}[label={sec:orgc6b78d3}]{Seguidor de eje horizontal N-S}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-1-3-7]{Seguidor de doble eje}
+\begin{frame}[label={sec:org0f5465a}]{Seguidor de doble eje}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorReocin.jpg}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-8]{SFCR en edificación}
+\begin{frame}[label={sec:orge4b3eef}]{SFCR en edificación}
 \begin{itemize}
 \item La integración del sistema fotovoltaico con el edificio exige tener en cuenta muchos factores que condicionan la ubicación y la configuración del generador.
 
@@ -222,7 +232,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-9]{Integración arquitectónica}
+\begin{frame}[label={sec:orgd8df626}]{Integración arquitectónica}
 \begin{itemize}
 \item Cubierta Inclinada
 \item Cubierta Plana
@@ -233,47 +243,59 @@ necesarios),
 \item \ldots{}
 \end{itemize}
 
-\begin{exampleblock}{}
+\begin{block}{}
 \url{http://www.pvdatabase.org/}
-\end{exampleblock}
+\end{block}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-10]{Cubierta Inclinada}
+\begin{frame}[label={sec:org0837743}]{Cubierta Inclinada}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CubiertaInclinada.png}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-11]{Cubierta Plana}
+\begin{frame}[label={sec:org8555a87}]{Cubierta Plana}
+\begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/CubiertaPlana.png}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-12]{Parasol}
+\begin{frame}[label={sec:org6b73c7e}]{Parasol}
+\begin{center}
 \includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/Parasol.png}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-13]{Fachada Acristalada}
+\begin{frame}[label={sec:orgf9d3a4c}]{Fachada Acristalada}
+\begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/FachadaAcristalada.png}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-14]{Muro Cortina}
+\begin{frame}[label={sec:org56c5484}]{Muro Cortina}
+\begin{center}
 \includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/MuroCortina.png}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-15]{Aparcamiento}
+\begin{frame}[label={sec:orgffa125b}]{Aparcamiento}
+\begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/Aparcamiento.png}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-1-3-16]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label={sec:org9ce31bf}]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item El CTE-HTE5 divide España en cinco zonas climáticas de acuerdo al valor medio anual de la radiación global diaria en el plano horizontal.
 
-\item Por ejemplo, toda la cornisa cantábrica está encuadrada en la zona I (radiación inferior a $\SI{3.8}{\kWh\per\meter\squared}$) mientras que Canarias y parte de Andalucía pertenecen a la zona V (radiación superior a $\SI{5}{\kWh\per\meter\squared}$) .
+\item Por ejemplo, toda la cornisa cantábrica está encuadrada en la zona I (radiación inferior a \(\SI{3.8}{\kWh\per\meter\squared}\)) mientras que Canarias y parte de Andalucía pertenecen a la zona V (radiación superior a \(\SI{5}{\kWh\per\meter\squared}\)) .
 
 \item Este Código aboga por instalar mayor potencia en las zonas con mayor radiación.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-17]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label={sec:org532b3fd}]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item Potencia \alert{nominal} a instalar
 \end{itemize}
@@ -281,18 +303,18 @@ necesarios),
 $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 
 \begin{itemize}
-\item Esta potencia debe ser superior a $\SI{5}{\kilo\watt}$ e inferior a $\SI{100}{\kilo\watt}$.
+\item Esta potencia debe ser inferior a \(\SI{100}{\kilo\watt}\).
 
-\item $C=1$ para zona climática I, $C=1.4$ para zona climática V.
+\item \(C=1\) para zona climática I, \(C=1.4\) para zona climática V.
 
-\item Aplica sólo cuando $S > \SI{5000}{\meter\squared}$.
+\item Aplica sólo cuando \(S > \SI{5000}{\meter\squared}\).
 \end{itemize}
 \end{frame}
 
 \subsection{Condiciones técnicas de la conexión}
-\label{sec-1-4}
+\label{sec:org55e081d}
 
-\begin{frame}[label=sec-1-4-1]{SFCR en Edificación: sistemas eléctricos}
+\begin{frame}[label={sec:orgf816baf}]{SFCR en Edificación: sistemas eléctricos}
 \begin{itemize}
 \item En este tipo de SFCR el diseño de los sistemas eléctricos debe tener en cuenta las canalizaciones previstas o existentes en el edificio.
 
@@ -302,13 +324,13 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-2]{Separación entre comercialización y generación}
+\begin{frame}[label={sec:orged22203}]{Separación entre comercialización y generación}
 \begin{itemize}
 \item La reglamentación eléctrica española establece la separación administrativa entre la comercialización y la distribución de la energía (así, la empresa que nos vende energía eléctrica en nuestro hogar es distinta a la que compra la energía que produce el sistema que podamos tener en nuestro tejado).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-3]{Generación distribuida}
+\begin{frame}[label={sec:org517b303}]{Generación distribuida}
 \begin{itemize}
 \item Por tanto, al menos administrativamente, la generación fotovoltaica y el consumo cercano son dos elementos independientes.
 
@@ -318,7 +340,7 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-4]{El problema de la medida}
+\begin{frame}[label={sec:orgaefe414}]{El problema de la medida}
 \begin{itemize}
 \item La separación existente entre empresa comercializadora y empresa distribuidora se refleja en la separación de contratos y facturas, y por tanto, también de elementos y puntos de medida.
 
@@ -328,7 +350,7 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-5]{Ejemplo: suministro en MT}
+\begin{frame}[label={sec:orgd9f7c86}]{Ejemplo: suministro en MT}
 \begin{itemize}
 \item \alert{Titulares con contrato de suministro en Media Tensión con instalaciones fotovoltaicas de potencia menor a 100 kW}
 
@@ -342,7 +364,7 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-6]{Ejemplo: comunidades de vecinos}
+\begin{frame}[label={sec:orgc8f2f43}]{Ejemplo: comunidades de vecinos}
 \begin{itemize}
 \item \alert{Titulares en edificios de varias viviendas}
 
@@ -355,21 +377,21 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{frame}
 
 \section{Inversor de CR}
-\label{sec-2}
+\label{sec:org1d824a0}
 
 \subsection{Conceptos Generales}
-\label{sec-2-1}
-\begin{frame}[label=sec-2-1-1]{Acoplamiento a la red}
-\begin{exampleblock}{}
+\label{sec:org43ec866}
+\begin{frame}[label={sec:orga40b9ab}]{Acoplamiento a la red}
+\begin{block}{}
 La potencia suministrada por un generador fotovoltaico iluminado es de
 tensión continua, que debe ser adecuadamente acondicionada para permitir
 el funcionamiento correcto de las cargas conectadas en un sistema
 autónomo o el acoplamiento a la red eléctrica en el caso de sistemas de
 conexión a red.
-\end{exampleblock}
+\end{block}
 \end{frame}
 
-\begin{frame}[label=sec-2-1-2]{Definición}
+\begin{frame}[label={sec:org78303e9}]{Definición}
 \begin{itemize}
 \item El equipo de acondicionamiento de potencia, denominado inversor DC/AC, realiza la \alert{conversión de continua a alterna cumpliendo con  determinados requisitos} de tensión eficaz, frecuencia, distorsión armónica de las ondas de tensión y corriente, rendimiento instantáneo y medio, seguridad eléctrica, etc.
 
@@ -378,8 +400,8 @@ conexión a red.
 \end{frame}
 
 \subsection{Tipos de Inversores}
-\label{sec-2-2}
-\begin{frame}[label=sec-2-2-1]{Tipos de inversores}
+\label{sec:orgefa0a86}
+\begin{frame}[label={sec:org053a7c5}]{Tipos de inversores}
 A grandes rasgos, los inversores pueden agruparse en tres categorías:
 
 \begin{itemize}
@@ -393,7 +415,7 @@ a una rama del generador.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-2-2]{Inversores de Rama}
+\begin{frame}[label={sec:org8ad6694}]{Inversores de Rama}
 \begin{itemize}
 \item Los \alert{inversores orientados a rama} son particularmente útiles en
 algunos sistemas de integración arquitectónica, al poder adaptarse
@@ -405,7 +427,7 @@ pequeños sistemas demostrativos).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-2-3]{Inversores Centrales}
+\begin{frame}[label={sec:orgff96e4e}]{Inversores Centrales}
 \begin{itemize}
 \item Los \alert{inversores centrales} son recomendables para instalaciones de
 medio o gran tamaño. Permiten reducir costes (de adquisición,
@@ -418,8 +440,8 @@ de 100 kW o 4 de 250 kW, pero no con 200 de 5 kW).
 \end{frame}
 
 \subsection{Características básicas}
-\label{sec-2-3}
-\begin{frame}[label=sec-2-3-1]{Potencia y ventana MPP}
+\label{sec:orgd4320ff}
+\begin{frame}[label={sec:orgeca0d8a}]{Potencia y ventana MPP}
 \begin{itemize}
 \item \alert{Potencia nominal y máxima}, siendo ésta un porcentaje de sobrecarga
 que el equipo es capaz de soportar durante un determinado período de
@@ -431,7 +453,7 @@ algoritmo de búsqueda del MPP del generador fotovoltaico.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-3-2]{Tensiones}
+\begin{frame}[label={sec:orgbb0dfb8}]{Tensiones}
 \begin{itemize}
 \item \alert{Tensión máxima de entrada}: es la máxima tensión que el inversor
 puede aguantar sin sufrir una avería.
@@ -442,12 +464,12 @@ y 400 Vac para equipos trifásicos).
 
 \item \alert{Umbral de arranque}: según las unidades en las que se expresa, puede
 indicar la radiación solar incidente en el generador
-($\si{\watt\per\meter\squared}$) o la potencia de entrada (W)
+(\(\si{\watt\per\meter\squared}\)) o la potencia de entrada (W)
 necesaria para que el inversor comience el proceso de conversión.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-3-3]{Eficiencia y Rendimiento}
+\begin{frame}[label={sec:org6766d62}]{Eficiencia y Rendimiento}
 \begin{itemize}
 \item \alert{Eficiencia máxima}: máximo valor que toma la relación entre potencia
 de salida y potencia de entrada. En inversores de calidad la
@@ -461,9 +483,11 @@ características de la zona centroeuropea.
 \end{itemize}
 \end{frame}
 \subsection{Composición}
-\label{sec-2-4}
-\begin{frame}[label=sec-2-4-1]{Entrada}
+\label{sec:org8fab4c1}
+\begin{frame}[label={sec:org16b498c}]{Entrada}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
+\end{center}
 
 \begin{itemize}
 \item \alert{Filtro de entrada}: atenúa el rizado que produce la conmutación en
@@ -475,8 +499,10 @@ realizar las funciones de búsqueda del punto de máxima potencia.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-4-2]{Puente y salida}
+\begin{frame}[label={sec:org0e23626}]{Puente y salida}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
+\end{center}
 
 \begin{itemize}
 \item \alert{Puente inversor}: realiza el troceado de la señal continua para
@@ -490,8 +516,10 @@ AC.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-4-3]{Control}
+\begin{frame}[label={sec:orga6819db}]{Control}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
+\end{center}
 
 \begin{itemize}
 \item \alert{Control}: realiza la supervisión de la entrada y salida del
@@ -503,13 +531,17 @@ salida del inversor.
 \end{frame}
 
 \subsection{Funcionamiento}
-\label{sec-2-5}
-\begin{frame}[label=sec-2-5-1]{Modulación SPWM}
+\label{sec:org13224a5}
+\begin{frame}[label={sec:org3e11095}]{Modulación SPWM}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SPWMMonofasico.pdf}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-2-5-2]{Busqueda del Punto de Máxima Potencia}
+\begin{frame}[label={sec:org8cc9396}]{Busqueda del Punto de Máxima Potencia}
+\begin{center}
 \includegraphics[height=0.6\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
+\end{center}
 
 $$\begin{cases}
       \frac{dP}{dV}>0 & 0<V<V_{mpp}\\
@@ -517,8 +549,10 @@ $$\begin{cases}
       \frac{dP}{dV}<0 & V_{mpp}<V<V_{oc}\end{cases}$$
 \end{frame}
 
-\begin{frame}[label=sec-2-5-3]{Busqueda del Punto de Máxima Potencia}
+\begin{frame}[label={sec:orge50f93d}]{Busqueda del Punto de Máxima Potencia}
+\begin{center}
 \includegraphics[height=0.6\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
+\end{center}
 
 $$\begin{cases}
       \frac{dI}{dV}>-\frac{I}{V} & 0<V<V_{mpp}\\
@@ -526,8 +560,10 @@ $$\begin{cases}
       \frac{dI}{dV}<-\frac{I}{V} & V_{mpp}<V<V_{oc}\end{cases}$$
 \end{frame}
 
-\begin{frame}[label=sec-2-5-4]{Transformador de salida}
+\begin{frame}[label={sec:orgc32cae4}]{Transformador de salida}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
+\end{center}
 
 \begin{itemize}
 \item El transformador permite adecuar el nivel de tensión de salida del
@@ -542,7 +578,7 @@ y la salida (AC).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-5-5]{Opciones comerciales}
+\begin{frame}[label={sec:org6a75096}]{Opciones comerciales}
 Existen tres opciones en el mercado de inversores de conexión a red:
 
 \begin{itemize}
@@ -554,7 +590,7 @@ Existen tres opciones en el mercado de inversores de conexión a red:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-5-6]{Normativa relativa al transformador}
+\begin{frame}[label={sec:orga8854c8}]{Normativa relativa al transformador}
 La normativa vigente en España obliga al uso de un transformador de aislamiento o elemento equivalente para cumplir tres objetivos:
 
 \begin{enumerate}
@@ -566,7 +602,7 @@ La normativa vigente en España obliga al uso de un transformador de aislamiento
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label=sec-2-5-7]{Normativa: Nota de Interpretación Tecnica}
+\begin{frame}[label={sec:orga2abb19}]{Normativa: Nota de Interpretación Tecnica}
 \begin{itemize}
 \item Objetivos 1 y 2 se consiguen mediante la adecuada conexión de masas y tierras en el sistema.
 
@@ -575,12 +611,14 @@ La normativa vigente en España obliga al uso de un transformador de aislamiento
 \end{frame}
 
 \subsection{Islanding}
-\label{sec-2-6}
-\begin{frame}[label=sec-2-6-1]{Definición del problema}
+\label{sec:org75d5384}
+\begin{frame}[label={sec:org124ff66}]{Definición del problema}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Isla.pdf}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-2-6-2]{Ecuaciones básicas}
+\begin{frame}[label={sec:org31b8e32}]{Ecuaciones básicas}
 Antes de la desconexión:$$\Delta P=P_{carga}-P_{PV}$$
 
 $$\Delta Q=Q_{carga}-Q_{PV}\simeq Q_{carga}$$
@@ -592,40 +630,42 @@ $$P_{carga}=\frac{V^{2}}{R_{carga}}$$
 $$Q_{carga}=\frac{V^{2}}{\omega L}-V^{2}\omega C$$
 \end{frame}
 
-\begin{frame}[label=sec-2-6-3]{Casos posibles}
+\begin{frame}[label={sec:orgfbc3a11}]{Casos posibles}
 \begin{itemize}
-\item $\Delta P^{-}>0\rightarrow P_{carga}>P_{PV}$. Al producirse la
-desconexión, dado que $P_{PV}$ no cambia, disminuye la potencia
+\item \(\Delta P^{-}>0\rightarrow P_{carga}>P_{PV}\). Al producirse la
+desconexión, dado que \(P_{PV}\) no cambia, disminuye la potencia
 entregada a la carga, y por tanto baja la tensión.
 
-\item $\Delta P^{-}<0\rightarrow P_{carga}<P_{PV}$. Al producirse la
+\item \(\Delta P^{-}<0\rightarrow P_{carga}<P_{PV}\). Al producirse la
 desconexión, aumenta la potencia entregada a la carga, y por tanto
 sube la tensión.
 
-\item $\Delta Q^{-}>0\rightarrow Q_{carga}>0$. La carga es inductiva. Al
+\item \(\Delta Q^{-}>0\rightarrow Q_{carga}>0\). La carga es inductiva. Al
 producirse la desconexión, dado que el generador FV no entrega
 reactiva, la reactiva debe tender a 0, y por tanto aumenta la
 frecuencia.
 
-\item $\Delta Q^{-}<0\rightarrow Q_{carga}<0$. La carga es capacitiva. La
+\item \(\Delta Q^{-}<0\rightarrow Q_{carga}<0\). La carga es capacitiva. La
 reactiva debe tender a cero, y por tanto disminuye la frecuencia.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-6-4]{Ventana de no-detección}
+\begin{frame}[label={sec:org55794b6}]{Ventana de no-detección}
 Cuando las condiciones de trabajo del generador y el consumo antes de la
 desconexión son muy cercanas, existe una ventana de no-detección.
 
 \begin{center}
+\begin{center}
 \includegraphics[height=0.6\textheight]{../figs/NDZ.pdf}
+\end{center}
 \end{center}
 \end{frame}
 
-\begin{frame}[label=sec-2-6-5]{Estudio experimental IEA-PVPS}
+\begin{frame}[label={sec:org276765b}]{Estudio experimental IEA-PVPS}
 \begin{itemize}
 \item La probabilidad de que se de una situación de balance entre consumo y
-generación en una red de Baja Tensión está entre $\num{1e-5}$ y
-$\num{1e-6}$.
+generación en una red de Baja Tensión está entre \(\num{1e-5}\) y
+\(\num{1e-6}\).
 
 \item Para que se de una situación de isla, este balance debe coincidir con
 una desconexión de la red: la probabilidad de ocurrencia simultánea
@@ -633,19 +673,18 @@ de estos dos sucesos es virtualmente nula.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-6-6]{Estudio experimental IEA-PVPS}
+\begin{frame}[label={sec:org29de8f9}]{Estudio experimental IEA-PVPS}
 \begin{itemize}
 \item El riesgo eléctrico existente en cualquier red eléctrica es del orden
-de $\num{1e-6}$.
+de \(\num{1e-6}\).
 
 \item Este estudio mostró que el riesgo de accidente eléctrico asociado a
 un sistema fotovoltaico funcionando en isla bajo los escenarios de
-mayor penetración fotovoltaica era inferior a $\num{1e-9}$.
+mayor penetración fotovoltaica era inferior a \(\num{1e-9}\).
 
 \item Este resultado indica que el riesgo asociado al accidente eléctrico
 por isla FV no incrementa el riesgo que ya existe en las
 instalaciones eléctricas.
 \end{itemize}
 \end{frame}
-% Emacs 24.4.1 (Org mode 8.2.7c)
 \end{document}
