--- a/libro/Licencia.tex
+++ b/libro/Licencia.tex
@@ -3,9 +3,9 @@
 }
 \rule[.5ex]{\linewidth}{1pt} 
 
-Versión 1.8 Marzo de 2015
+Versión 1.9 Enero de 2017
 
-© 2015, 2014, 2013, 2012, 2011, 2010, 2009 Oscar Perpiñán Lamigueiro
+© 2017, 2015, 2014, 2013, 2012, 2011, 2010, 2009 Oscar Perpiñán Lamigueiro
 
 Este documento está accesible en \url{https://github.com/oscarperpinan/esf}
 
